--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--240720085\testng-customsuite.xml</span>
+                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--1940982730\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRVendorPageTest" class="method navigator-link" hash-for-method="clickOnViewVendorIcon">clickOnViewVendorIcon</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRVendorPageTest" class="method navigator-link" hash-for-method="verifyVendorDetailsDescInArab">verifyVendorDetailsDescInArab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clickOnViewVendorIcon">
-                  </a> <!-- clickOnViewVendorIcon -->
-                  <span class="method-name">clickOnViewVendorIcon</span>
+                  <a name="verifyVendorDetailsDescInArab">
+                  </a> <!-- verifyVendorDetailsDescInArab -->
+                  <span class="method-name">verifyVendorDetailsDescInArab</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--240720085\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--1940982730\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;easyr.qa.testCases.EasyRVendorPageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;clickOnViewVendorIcon&quot;/&gt;
+          &lt;include name=&quot;verifyVendorDetailsDescInArab&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- easyr.qa.testCases.EasyRVendorPageTest --&gt;
     &lt;/classes&gt;
@@ -191,9 +191,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clickOnViewVendorIcon')
+data.setCell(0, 1, 'verifyVendorDetailsDescInArab')
 data.setCell(0, 2, 'easyr.qa.testCases.EasyRVendorPageTest')
-data.setCell(0, 3, 7304);
+data.setCell(0, 3, 7441);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -213,63 +213,77 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">26 ignored methods</span>
+            <span class="header-content">33 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">easyr.qa.testCases.EasyRVendorPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyDisplayedVendorAnalystIcon</span>
-                <br/>
-                <span class="ignored-method-name">verifySelectAddressFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyDisplayedVendorQRCodeIcon</span>
-                <br/>
-                <span class="ignored-method-name">verifyBlankCompanyWebsiteFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyDescInArabicFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorCategoryFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyInvalidCompanyWebsiteFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyDisplayedVendorEditIcon</span>
+                <span class="ignored-method-name">clickOnViewVendorIcon</span>
                 <br/>
                 <span class="ignored-method-name">verifyDisplayedVendorViewIcon</span>
                 <br/>
-                <span class="ignored-method-name">verifySearchTagsFieldValidation</span>
+                <span class="ignored-method-name">verifyInvalidEmailFieldValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyDescInDanishFieldValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyDescInArabicFieldValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyVendorDetailsPageVendorCode</span>
+                <br/>
+                <span class="ignored-method-name">verifyDescInEnglishFieldValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyVendorDetailsDescInDan</span>
+                <br/>
+                <span class="ignored-method-name">verifyVendorDetailsPageVendorName</span>
+                <br/>
+                <span class="ignored-method-name">verifyDisplayedVendorAnalystIcon</span>
+                <br/>
+                <span class="ignored-method-name">verifyInvalidMobileNoFieldValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyDisplayedDeleteIcon</span>
                 <br/>
                 <span class="ignored-method-name">verifyCreatVendor</span>
                 <br/>
                 <span class="ignored-method-name">verifyVendorLogoValidation</span>
                 <br/>
-                <span class="ignored-method-name">verifyDisplayedDeleteIcon</span>
+                <span class="ignored-method-name">verifyVendorNameValidation</span>
                 <br/>
-                <span class="ignored-method-name">verifyDescInEnglishFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyMobileNoFieldBlankSpaceValidation</span>
+                <span class="ignored-method-name">verifySearchTagsFieldValidation</span>
                 <br/>
                 <span class="ignored-method-name">verifyParentVendorFieldValidation</span>
                 <br/>
+                <span class="ignored-method-name">verifyVendorDetailsPageVendorEmail</span>
+                <br/>
                 <span class="ignored-method-name">verifyDisplayedChangePwdIcon</span>
                 <br/>
-                <span class="ignored-method-name">verifyVendorProfileValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyInvalidMobileNoFieldValidation</span>
+                <span class="ignored-method-name">verifyInvalidCompanyWebsiteFieldValidation</span>
                 <br/>
                 <span class="ignored-method-name">verifyCompanyNameFieldValidation</span>
                 <br/>
-                <span class="ignored-method-name">verifyInvalidEmailFieldValidation</span>
+                <span class="ignored-method-name">verifyBlankCompanyWebsiteFieldValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyVendorDetailsDescInEng</span>
+                <br/>
+                <span class="ignored-method-name">verifyDisplayedVendorQRCodeIcon</span>
+                <br/>
+                <span class="ignored-method-name">verifyVendorDetailsPageCompanyName</span>
                 <br/>
                 <span class="ignored-method-name">verifyDisplayedVendorActiveStatusToggle</span>
                 <br/>
-                <span class="ignored-method-name">verifyMobileFieldValidation</span>
+                <span class="ignored-method-name">verifyDisplayedVendorEditIcon</span>
+                <br/>
+                <span class="ignored-method-name">verifyVendorCategoryFieldValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyMobileNoFieldBlankSpaceValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyVendorProfileValidation</span>
                 <br/>
                 <span class="ignored-method-name">verifyEmailFieldValidation</span>
                 <br/>
-                <span class="ignored-method-name">verifyVendorNameValidation</span>
+                <span class="ignored-method-name">verifySelectAddressFieldValidation</span>
                 <br/>
-                <span class="ignored-method-name">verifyDescInDanishFieldValidation</span>
+                <span class="ignored-method-name">verifyMobileFieldValidation</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -287,12 +301,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">clickOnViewVendorIcon</span>
-                <span class="method-start">2416 ms</span>
+                <span class="method-name">verifyVendorDetailsDescInArab</span>
+                <span class="method-start">2133 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">9722 ms</span>
+                <span class="method-start">9575 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
